--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
     "build:ios": "react-native build-ios --mode Debug"
   },
   "dependencies": {
+    "@showdar/react-native-splash-view": "file:..",
     "react": "19.0.0",
     "react-native": "0.79.2"
   },
