--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@showdar/react-native-splash-view",
-  "version": "1.0.0",
+  "name": "@leo-showdar/react-native-splash-view",
+  "version": "1.0.1",
   "description": "A native view to show image or lotie splash",
   "main": "./lib/module/index.js",
   "types": "./lib/typescript/src/index.d.ts",
@@ -32,7 +32,7 @@
     "!**/.*"
   ],
   "scripts": {
-    "example": "yarn workspace @showdar/react-native-splash-view-example",
+    "example": "yarn workspace @leo-showdar/react-native-splash-view-example",
     "test": "jest",
     "typecheck": "tsc",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
@@ -56,6 +56,7 @@
   },
   "homepage": "https://github.com/caongocquy/react-native-splash-view#readme",
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
