--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
     "build:ios": "react-native build-ios --mode Debug"
   },
   "dependencies": {
-    "@leo-showdar/react-native-splash-view": "portal:..",
+    "@leo-showdar/react-native-splash-view": "1.0.1",
     "react": "19.0.0",
     "react-native": "0.79.2"
   },
