--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leo-showdar/react-native-splash-view",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A native view to show image or lotie splash",
   "main": "./lib/module/index.js",
   "types": "./lib/typescript/src/index.d.ts",
@@ -30,7 +30,8 @@
     "!**/__fixtures__",
     "!**/__mocks__",
     "!**/.*",
-    "README.md"
+    "README.md",
+    "LICENSE"
   ],
   "scripts": {
     "test": "jest",
