--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,7 +26,7 @@ def getExtOrIntegerDefault(name) {
 }
 
 android {
-  namespace "com.showdar.reactnativesplashview"
+  namespace "com.leoshowdar.reactnativesplashview"
 
   compileSdkVersion getExtOrIntegerDefault("compileSdkVersion")
 
@@ -79,5 +79,5 @@ dependencies {
 react {
   jsRootDir = file("../src/")
   libraryName = "ReactNativeSplashView"
-  codegenJavaPackageName = "com.showdar.reactnativesplashview"
+  codegenJavaPackageName = "com.leoshowdar.reactnativesplashview"
 }
