--- a/android/build.gradle
+++ b/android/build.gradle
@@ -74,6 +74,7 @@ def kotlin_version = getExtOrDefault("kotlinVersion")
 dependencies {
   implementation "com.facebook.react:react-android"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation 'com.airbnb.android:lottie:6.6.6'
 }
 
 react {
